--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -356,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chicken",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
